--- a/infra/compose/compose.dev.yml
+++ b/infra/compose/compose.dev.yml
@@ -9,10 +9,11 @@ services:
       - "50050:50050"
     environment:
       - NODE_ID=control-plane-1
-      - FOLLOWERS=control-plane-2,control-plane-3
+      - FOLLOWERS=control-plane-2,control-plane-3,control-plane-4
     depends_on:
       - control-plane-2
       - control-plane-3
+      - control-plane-4
 
   control-plane-2:
     build:
@@ -22,7 +23,7 @@ services:
       - "50051:50050"
     environment:
       - NODE_ID=control-plane-2
-      - FOLLOWERS=control-plane-1,control-plane-3
+      - FOLLOWERS=control-plane-1,control-plane-3,control-plane-4
 
   control-plane-3:
     build:
@@ -32,4 +33,14 @@ services:
       - "50052:50050"
     environment:
       - NODE_ID=control-plane-3
-      - FOLLOWERS=control-plane-1,control-plane-2
+      - FOLLOWERS=control-plane-1,control-plane-2,control-plane-4
+
+  control-plane-4:
+    build:
+      context: ../../control-plane
+      dockerfile: app.Dockerfile
+    ports:
+      - "50053:50050"
+    environment:
+      - NODE_ID=control-plane-3
+      - FOLLOWERS=control-plane-1,control-plane-2,control-plane-3
