--- a/infra/compose/compose.dev.yml
+++ b/infra/compose/compose.dev.yml
@@ -8,12 +8,11 @@ services:
     ports:
       - "50050:50050"
     environment:
+      - LEADER=true
       - NODE_ID=control-plane-1
-      - FOLLOWERS=control-plane-2,control-plane-3,control-plane-4
+      - CANDIDATES=control-plane-2,control-plane-3
     depends_on:
-      - control-plane-2
-      - control-plane-3
-      - control-plane-4
+      - kafka
 
   control-plane-2:
     build:
@@ -22,8 +21,11 @@ services:
     ports:
       - "50051:50050"
     environment:
+      - LEADER=false
       - NODE_ID=control-plane-2
-      - FOLLOWERS=control-plane-1,control-plane-3,control-plane-4
+      - CANDIDATES=control-plane-1,control-plane-3
+    depends_on:
+      - kafka
 
   control-plane-3:
     build:
@@ -32,15 +34,53 @@ services:
     ports:
       - "50052:50050"
     environment:
+      - LEADER=false
       - NODE_ID=control-plane-3
-      - FOLLOWERS=control-plane-1,control-plane-2,control-plane-4
+      - CANDIDATES=control-plane-1,control-plane-2
+    depends_on:
+      - kafka
 
-  control-plane-4:
+  storage-service:
     build:
-      context: ../../control-plane
+      context: ../../storage-service
       dockerfile: app.Dockerfile
-    ports:
-      - "50053:50050"
+    depends_on:
+      - kafka
+
+  metadata-service:
+    build:
+      context: ../../metadata-service
+      dockerfile: app.Dockerfile
+    depends_on:
+      - kafka
+
+  replication-service:
+    build:
+      context: ../../replication-service
+      dockerfile: app.Dockerfile
+    depends_on:
+      - kafka
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
     environment:
-      - NODE_ID=control-plane-3
-      - FOLLOWERS=control-plane-1,control-plane-2,control-plane-3
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - 2181:2181
+
+  kafka:
+    image: bitnami/kafka:latest
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=3
+      - KAFKA_MESSAGE_MAX_BYTES=100000000
+      - KAFKA_REPLICA_FETCH_MAX_BYTES=100000000
+      - KAFKA_MAX_REQUEST_SIZE=100000000
+      - PARTITIONS=10
+    depends_on:
+      - zookeeper
+
